* And... Down to 2147 bytes. The $.fn.sb object is as small as it'll ever be. extraWidth and offsetFrom always get passed jQuery objects (since they're plugins, technically...), so they don't need to access $(this), just this. 'self' was no longer used, so there it goes. $orig and o are directly initialized by the Selectbox object function's arguments now. And that's enough to reduce the size by 40+ bytes, as you can see. (sbox.js) + Added support for IE6 in the select box plugin. Well, to be precise -- it's not that I want the full experience to be on IE6. It's just that I don't see why I should waste time on every browser testing for IE6 before I can create the select box object. Considering that the internal HTML structure no longer requires direct > selectors, IE6 actually behaves well in most cases. The only issue is that it doesn't support compound classes, but it's not a big deal in this case, and anyway I'll probably add some JavaScript to deal with that for it. Also fixed a related rendering glitch in profile options. (sbox.js, index.ie6.css)

--- a/Themes/default/skins/index.ie6.css
+++ b/Themes/default/skins/index.ie6.css
@@ -132,6 +132,11 @@ li.separator
 #basicinfo h4
 	word-wrap: break-word
 
+#theme_settings li
+	list-style: none
+	margin: 10px 0
+	padding: 0
+
 .ignoreboards
 	margin: 0 1%
 	padding: 0
